--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,9 @@
             <%= i +1 %>
           </th>
           <td class="tdata">
-            <%= data[i].details %>
+            <a href="<%= `/note/${i + 1}` %>">
+              <%= data[i].details %>
+            </a>
           </td>
           <td>
             <form action="/note/<%= i %>?_method=DELETE" method="POST">
