--- a/views/rendernote.ejs
+++ b/views/rendernote.ejs
@@ -1,40 +1,21 @@
 <%- include('header', {title: `Bird Note`}); -%>
 
-  <h1 style="text-align: center">UFO Sighting</h1>
+  <h1 style="text-align: center">Birding Note</h1>
   <div class="container">
     <form action="/sighting" method="POST">
       <div class="col-md-12 mb-3 submit-label">
-        <label for="text" class="form-label">Text</label>
-        <textarea disabled class="form-control" name="text" rows="3"><%= text %></textarea>
+        <label for="details" class="form-label">Text</label>
+        <textarea disabled class="form-control" name="details" rows="3"><%= data[0].details %></textarea>
       </div>
       <div class="col-md-12 mb-3 submit-label">
-        <label for="date-time" class="form-label">Date & Time</label>
-        <input disabled type="text" class="form-control" name="date_time" value=<%=date_time %>>
+        <label for="behavior" class="form-label">Text</label>
+        <textarea disabled class="form-control" name="behavior" rows="3"><%= data[0].behaviour %></textarea>
       </div>
       <div class="col-md-12 mb-3 submit-label">
-        <label for="city" class="form-label">City</label>
-        <input disabled type="text" class="form-control" name="city" value=<%=city %>>
+        <label for="flocksize" class="form-label">Text</label>
+        <textarea disabled class="form-control" name="flocksize" rows="3"><%= data[0].flocksize %></textarea>
       </div>
-      <div class="col-md-12 mb-3 submit-label">
-        <label for="state" class="form-label">State</label>
-        <input disabled type="text" class="form-control" name="state" value=<%=state %>>
-      </div>
-      <div class="col-md-12 mb-3 submit-label">
-        <label for="shape" class="form-label">Shape</label>
-        <input disabled type="text" class="form-control" name="shape" value=<%=shape %>>
-      </div>
-      <div class="col-md-12 mb-3 submit-label">
-        <label for="duration" class="form-label">Duration</label>
-        <input disabled type="text" class="form-control" name="duration" value=<%=duration %>>
-      </div>
-      <div class="col-md-12 mb-3 submit-label">
-        <label for="summary" class="form-label">Summary</label>
-        <textarea disabled class="form-control" name="summary" rows="3"><%= summary %></textarea>
-      </div>
-      <div class="col-md-12 mb-3 submit-label">
-        <label for="time-submitted" class="form-label">Time Submitted</label>
-        <textarea disabled class="form-control" name="time_submitted" rows="3"><%= time_submitted %></textarea>
-      </div>
+
       <br>
       <br>
 
