poce 5 base done

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,6 +18,6 @@
 <body>
   <nav class="nav">
     <a class="nav-link active" href="/">Home</a>
-    <a class="nav-link" href="/submitsighting">Sighting Submission</a>
-    <a class="nav-link" href="/shapes">Sightings by Shape</a>
+    <a class="nav-link" href="/note">Note Submission</a>
+    <a class="nav-link" href="#">Nothing to See</a>
   </nav>
