--- a/views/rendernote.ejs
+++ b/views/rendernote.ejs
@@ -4,8 +4,8 @@
   <div class="container">
     <form action="/sighting" method="POST">
       <div class="col-md-12 mb-3 submit-label">
-        <label for="details" class="form-label">Text</label>
-        <textarea disabled class="form-control" name="details" rows="3"><%= data[0].details %></textarea>
+        <label for="date" class="form-label">Text</label>
+        <textarea disabled class="form-control" name="date" rows="3"><%= data[0].date %></textarea>
       </div>
       <div class="col-md-12 mb-3 submit-label">
         <label for="behavior" class="form-label">Text</label>
