--- a/public/styles.css
+++ b/public/styles.css
@@ -40,7 +40,8 @@ body > .nav {
 .theader {
   color: aliceblue;
 }
-.thead , .tdata {
+.thead,
+.tdata {
   color: aliceblue;
 }
 .tdata > a,
@@ -84,6 +85,35 @@ h1 {
 .submit-label {
   text-align: left;
   color: blanchedalmond;
+}
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+  color: #212121;
+  border: 4px solid #ff993b;
+  border-radius: 25px;
+}
+
+.form-signin .checkbox {
+  font-weight: 400;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 @media screen and (max-width: 576px) {
   .nav {
