--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,9 +15,10 @@
   </title>
 </head>
 
-<body>
+<body class="text-center">
   <nav class="nav">
     <a class="nav-link active" href="/">Home</a>
     <a class="nav-link" href="/note">Note Submission</a>
-    <a class="nav-link" href="#">Nothing to See</a>
+    <a class="nav-link" href="/signup">Registration</a>
+    <a class="nav-link" href="/login">Login</a>
   </nav>
