completed login logout registration

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,4 +21,7 @@
     <a class="nav-link" href="/note">Note Submission</a>
     <a class="nav-link" href="/signup">Registration</a>
     <a class="nav-link" href="/login">Login</a>
+    <form action="/logout_method=DELETE" method="POST">
+      <a class="nav-link" href="/logout">Log Out</a>
+    </form>
   </nav>
