--- a/views/loginsuccess.ejs
+++ b/views/loginsuccess.ejs
@@ -1,29 +1,29 @@
-<%- include('header', {title: `User Login`}); -%>
+<%- include('header', {title: `Successful Login`}); -%>
 
 
 
-  <h1 style="text-align: center">User Login</h1>
+  <h1 style="text-align: center">Successful Login</h1>
 
   <div class="form-signin bg-light">
     <form action="/login" method="POST">
       <img class="mb-4" src="/img/CF_Mark.jpeg" alt="" width="72">
-      <h2 class="h3 mb-3 fw-normal">Please login</h2>
+      <h2 class="h3 mb-3 fw-normal">You have login sucessfully!</h2>
 
-      <div class="form-floating">
-        <input name="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <!-- <div class="form-floating">
+        <input disable name="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">Email address</label>
       </div>
       <div class="form-floating">
         <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
         <label for="floatingPassword">Set Password</label>
-      </div>
+      </div> -->
 
       <!-- <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
         </label>
       </div> -->
-      <button class="w-100 btn btn-lg btn-dark" type="submit">Login</button>
+      <!-- <button class="w-100 btn btn-lg btn-dark" type="submit">Login</button> -->
     </form>
   </div>
 
