--- a/views/submitnote.ejs
+++ b/views/submitnote.ejs
@@ -15,6 +15,18 @@
         <label for="flocksize" class="form-label">Flock Size</label>
         <textarea class="form-control" name="flocksize" rows="3"></textarea>
       </div>
+      <div class="col-md-12 mb-3 submit-label">
+        <label for="flocksize" class="form-label">Species</label>
+        <br>
+        <select name="species_id">
+          <% species.forEach((type)=> { %>
+            <option value="<%= type.id %>">
+              <%= type.name %>
+                (<%= type.scientific_name %>)
+            </option>
+            <% }); %>
+        </select>
+      </div>
       <div class="col-md-12">
         <input type="submit" value="Submit">
       </div>
