--- a/views/submitnote.ejs
+++ b/views/submitnote.ejs
@@ -18,7 +18,7 @@
       <div class="col-md-12 mb-3 submit-label">
         <label for="flocksize" class="form-label">Species</label>
         <br>
-        <select name="species_id">
+        <select name="speciesId">
           <% species.forEach((type)=> { %>
             <option value="<%= type.id %>">
               <%= type.name %>
