--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,6 +22,7 @@
     <a class="nav-link" href="/signup">Registration</a>
     <a class="nav-link" href="/login">Login</a>
     <form action="/logout_method=DELETE" method="POST">
-      <a class="nav-link" href="/logout">Log Out</a>
+      <a class="nav-link" href="/login">Log Out</a>
+
     </form>
   </nav>
