--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,13 +24,15 @@
           <td class="tdata">
             <%= data[i].behaviour %>
           </td>
+          <td class="tdata">
+            <%= data[i].species_name %>
+          </td>
           <td>
-            <form action="/note/<%= i %>?_method=DELETE" method="POST">
-              <input disabled type="submit" value="Delete" />
+            <form action="/note/<%= data[i].id %>?_method=DELETE" method="POST">
+              <input type="submit" value="Delete" />
             </form>
           </td>
-          <td><button disabled><a href="#"> Edit </a></button>
-          </td>
+
         </tr>
         <% }; %>
     </tbody>
